# autonomous_model_car

doc/: architecture  can_communication_matrix.ods
gazebo/: README.md
gazebo/models/prius_hybrid_distance_sensor/: model.config  model.sdf
gazebo/models/roundcourse_ground_plane/: model.sdf
gazebo/models/roundcourse_ground_plane/materials/scripts/: roundcourse_ground_plane.material
gazebo/worlds/: follow_drive.world
libs/simple_socket_can/: CMakeLists.txt
libs/simple_socket_can/simple_socket_can/: CMakeLists.txt
ros/: .gitignore  README.md
ros/bags/secondary_vehicle_remote_control_input_constant_drive/: metadata.yaml  secondary_vehicle_remote_control_input_constant_drive_0.db3
ros/launch/: acc_drive_gazebo_launch.py  follow_drive_sim_launch.py  piracer_acc_sim_launch.py  secondary_vehicle_remote_control_launch.py
ros/src/acc_strategy/: CMakeLists.txt  package.xml
ros/src/drive_publisher/: CMakeLists.txt  package.xml
ros/src/drive_strategies/src/: acc.cc
ros/src/environment_recognition/: CMakeLists.txt  package.xml
ros/src/environment_recognition/src/: environment_recognition.cc
ros/src/environment_recognition_interfaces/: CMakeLists.txt  package.xml
ros/src/environment_recognition_interfaces/msg/: TargetVehicle.msg
ros/src/secondary_vehicle_remote_control/: CMakeLists.txt  package.xml
ros/src/secondary_vehicle_remote_control/src/: secondary_vehicle_remote_control.cc
ros/src/sensor_grabber/: CMakeLists.txt  package.xml
ros/src/sensor_grabber/src/: sensor_grabber.cc
ros/src/sony_dualshock_three_controller_interfaces/: CMakeLists.txt  package.xml
ros/src/sony_dualshock_three_controller_interfaces/msg/: SonyDualShockThreeControllerInput.msg  SonyDualShockThreeControllerInputPercentage.msg
ros/src/sony_dualshock_three_controller_publisher/: package.xml  setup.cfg  setup.py
ros/src/sony_dualshock_three_controller_publisher/sony_dualshock_three_controller_publisher/: publisher.py
ros/src/vehicle_abstraction_layer/: CMakeLists.txt  README.md  package.xml
ros/src/vehicle_abstraction_layer/src/: socket_can.h  vehicle_abstraction_layer_can.cc  vehicle_abstraction_layer_gazebo.cc  vehicle_interface_virtual.cc
ros/src/vehicle_abstraction_layer_interfaces/: CMakeLists.txt  package.xml
ros/src/vehicle_abstraction_layer_interfaces/msg/: DriveControl.msg  VehicleState.msg
ros/src/vehicle_remote_control/: package.xml  setup.py
ros/src/vehicle_remote_control/vehicle_remote_control/: vehicle_remote_control.py
simulation/: README.md
simulation/gazebo/models/: source.bash
simulation/gazebo/models/roundcourse_ground_plane/: model.config
simulation/gazebo/worlds/: follow_drive.world
simulation/launch/: gazebo_with_can_bridge_launch.py
simulation/src/simulation_can_gateway/: CMakeLists.txt  package.xml
simulation/src/simulation_can_gateway/src/: simulation_can_gateway.cc
strategy_module/: .gitignore
strategy_module/bags/secondary_vehicle_remote_control_input/: metadata.yaml  secondary_vehicle_remote_control_input_0.db3
strategy_module/launch/: acc_drive_gazebo_launch.py  secondary_vehicle_remote_control_replay_launch.py
strategy_module/src/drive_strategies/: CMakeLists.txt  package.xml
strategy_module/src/environment_recognition/: CMakeLists.txt
strategy_module/src/environment_recognition/src/: environment_recognition.cc
strategy_module/src/environment_recognition_interfaces/: CMakeLists.txt  package.xml
strategy_module/src/sony_dualshock_three_controller_interfaces/: CMakeLists.txt  package.xml
strategy_module/src/sony_dualshock_three_controller_publisher/sony_dualshock_three_controller_publisher/: publisher.py
strategy_module/src/vehicle_abstraction_layer/: package.xml
strategy_module/src/vehicle_abstraction_layer/src/: socket_can.cc  vehicle_abstraction_layer_gazebo.cc
strategy_module/src/vehicle_abstraction_layer_interfaces/: CMakeLists.txt  package.xml
strategy_module/src/vehicle_abstraction_layer_interfaces/msg/: DriveControl.msg  SensorData.msg
strategy_module/src/vehicle_remote_control/: setup.cfg  setup.py
strategy_module/src/vehicle_remote_control/vehicle_remote_control/: vehicle_remote_control.py
