<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive_strategies</name>
  <version>0.0.1</version>
  <description>Drive startegy node for autonomous driving</description>
  <maintainer email="mail@twyleg.de">twyleg</maintainer>
  <license>GPL-3.0</license>

  <depend>environment_recognition_interfaces</depend>
  <depend>vehicle_abstraction_layer_interfaces</depend>
  <depend>sony_dualshock_three_controller_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
